--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     회사 생활로 알아보는 동물 유형 테스트 
   </title>
 
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="animation.css">
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="header+footer.css">
-  <link rel="stylesheet" href="welcome.css">
-  <link rel="stylesheet" href="qna.css">
-  <link rel="stylesheet" href="calc.css">
-  <link rel="stylesheet" href="result.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/animation.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/header+footer.css">
+  <link rel="stylesheet" href="css/welcome.css">
+  <link rel="stylesheet" href="css/qna.css">
+  <link rel="stylesheet" href="css/calc.css">
+  <link rel="stylesheet" href="css/result.css">
 
 </head>
 <body>
@@ -170,10 +170,10 @@
     </footer>
   </div>
   
-  <script src="darkmode.js"></script>
-  <script src="data.js"></script>
-  <script src="main.js"></script>
-  <script src="share.js"></script>
+  <script src="js/darkmode.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/share.js"></script>
 
 </body>
 
