--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     회사 생활로 알아보는 동물 유형 테스트 
   </title>
 
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/animation.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/header+footer.css">
-  <link rel="stylesheet" href="css/welcome.css">
-  <link rel="stylesheet" href="css/qna.css">
-  <link rel="stylesheet" href="css/calc.css">
-  <link rel="stylesheet" href="css/result.css">
+  <link rel="stylesheet" href="css+img/reset.css">
+  <link rel="stylesheet" href="css+img/animation.css">
+  <link rel="stylesheet" href="css+img/main.css">
+  <link rel="stylesheet" href="css+img/header+footer.css">
+  <link rel="stylesheet" href="css+img/welcome.css">
+  <link rel="stylesheet" href="css+img/qna.css">
+  <link rel="stylesheet" href="css+img/calc.css">
+  <link rel="stylesheet" href="css+img/result.css">
 
 </head>
 <body>
