--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!--수정-->
-  <link rel="shortcut icon" type="text/css" href="img/회사원.png">
-  <link rel="appel-touch-icon-precomposed" href="img/회사원.png">
+  <link rel="shortcut icon" type="text/css" href="css+img/img/회사원.png">
+  <link rel="appel-touch-icon-precomposed" href="css+img/img/회사원.png">
   
   <title>
     회사 생활로 알아보는 동물 유형 테스트 
