--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
       <hr>
       <div class="caution">
         <p>
-          동물의 종류가 7개 밖에 없어 정확하지 않을 수도 있습니다. 얼추 비슷하다고만 생각하세요. 그러면 어느새 그 캐릭터에 푹 빠지게 될 겁니다.<br><br>
+          동물의 종류가 7개 밖에 없어 정확하지 않을 수도 있습니다.<br>
+          테스트는 재미로만 봐주세요 :> <br>
+          그러면 어느새 그 캐릭터에 푹 빠지게 될 겁니다.<br><br>
           테스트가 재밌었다면
           <span class="go-share highlight" onclick=javascript:goShare()>공유하기</span>로 개발자를 도와주세요!
         </p>
