--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="회사 생활로 알아보는 8가지 질문">
   <meta property="og:description" content="사람들이 보는 나는 어떤 동물일까?">
   <!--수정-->
-  <meta property="og:image" content="이미지">
+  <meta property="og:image" content="css+img/img/미어캣.png">
   <meta property="og:url" content="https://dukwoo.github.io/personality-test/">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
